@@ -1,19 +1,23 @@
-# Copyright 2020-2022 David Robillard <d@drobilla.net>
+# Copyright 2020-2026 David Robillard <d@drobilla.net>
 # SPDX-License-Identifier: 0BSD OR ISC
 
 header_c_suppressions = []
 
-if get_option('warning_level') == 'everything'
-  if cc.get_id() == 'clang'
+if cc.get_id() == 'clang'
+  if get_option('warning_level') == 'everything'
     if not meson.is_cross_build()
       header_c_suppressions += ['-Wno-poison-system-directories']
     endif
-    header_c_suppressions += ['-Wno-poison-system-directories']
-  elif cc.get_id() == 'msvc'
-    header_c_suppressions += [
-      '/wd4820', # padding added after construct
-    ]
   endif
+
+  if warning_level in ['everything', '3']
+    header_c_suppressions += ['-Wno-nullability-extension']
+  endif
+
+elif cc.get_id() == 'msvc'
+  header_c_suppressions += [
+    '/wd4820', # padding added after construct
+  ]
 endif
 
 header_c_suppressions = cc.get_supported_arguments(header_c_suppressions)
